Prevent "invisible" tables from causing massive scrollbars
The live service usage tables are LONG, so cause the whole page to scroll with masses of whitespace at the bottom when "visually hidden". Instead give the container a max height and an overflow scroll.

--- a/styles/common/table.scss
+++ b/styles/common/table.scss
@@ -70,3 +70,8 @@ table {
     background: $white;
   }
 }
+
+.visualisation-table.visuallyhidden {
+  max-height: 28em;
+  overflow: auto;
+}
